# data6

./: Hw6.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
