[tool.poetry]
name = "3"
version = "0.1.0"
description = ""
authors = ["Іван Лубик <126516121+ivanlubyk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
yellowbrick = "^1.5"


[build-system]
requires = [">=3.11,<3.13"]
build-backend = "poetry.core.masonry.api"
